# aria-paper

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml
docs/: architecture.md  ipc-protocol.md  verb-kernel.md
evidence/: README.md  c1m2_age_bootstrap.json  debug_recovery.csv  metrics.json  replay_ablations.json  verb_distribution.json
examples/: README.md
kernel/: __init__.py  analyze.py  critique.py  execute.py  pool.py  score.py  self_heal.py  verbs.py
personas/: aria-template.md
tools/: aria-status.py
