[project]
name = "aria-kernel"
version = "0.1.0"
description = "Reference implementation of the ARIA research flywheel kernel"
readme = "README.md"
authors = [
    { name = "Justin H. Johnson" },
    { name = "Nick Bedworth" },
]
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
keywords = [
    "autonomous-research",
    "multi-agent",
    "llm-orchestration",
    "flywheel",
    "self-healing",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
analysis = [
    "pandas>=2.0",
    "numpy>=1.26",
    "scipy>=1.13",
    "matplotlib>=3.8",
]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
]

[project.urls]
Homepage = "https://github.com/BioInfo/aria-paper"
Paper = "https://doi.org/10.5281/zenodo.21383332"
Issues = "https://github.com/BioInfo/aria-paper/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kernel"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
